# NJL2

./: CMakeLists.txt  README.md  main.cpp
include/: Gauss.h  NJL_2flavor.h
src/: Gauss.cpp  NJL_2flavor.cpp
